force-app/main/default/objects/Intel__c/Intel__c.object-meta.xml
<CustomObject>
    <label>Intel</label>
    <nameField>
        <displayFormat>IL - {0000000}</displayFormat>
        <label>Intel ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>