force-app/main/default/objects/Intel__c/fields/Competitive__c.field-meta.xml
<CustomField>
    <fullName>Competitive__c</fullName>
    <label>Competitive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SEEDBEADS</fullName>
            </value>
            <value>
                <fullName>CHAIN</fullName>
            </value>
            <value>
                <fullName>PRICE</fullName>
            </value>
            <value>
                <fullName>OTHERWHAT</fullName>
            </value>
            <value>
                <fullName>BEADWIRE</fullName>
            </value>
            <value>
                <fullName>GEMSTONES</fullName>
            </value>
            <value>
                <fullName>SWAROVSKI</fullName>
            </value>
            <value>
                <fullName>PMWIRE</fullName>
            </value>
            <value>
                <fullName>SSFINDINGS</fullName>
            </value>
            <value>
                <fullName>PEARLS</fullName>
            </value>
            <value>
                <fullName>TOOLSORG</fullName>
            </value>
            <value>
                <fullName>SHIPWRECK</fullName>
            </value>
            <value>
                <fullName>RIOGRANDE</fullName>
            </value>
            <value>
                <fullName>ARTBEADS</fullName>
            </value>
            <value>
                <fullName>FUSION</fullName>
            </value>
            <value>
                <fullName>HELBY</fullName>
            </value>
            <value>
                <fullName>OTHERWHO</fullName>
            </value>
            <value>
                <fullName>BEADALON</fullName>
            </value>
            <value>
                <fullName>AMAZON</fullName>
            </value>
            <value>
                <fullName>IMPORT</fullName>
            </value>
            <value>
                <fullName>LIMABEADS</fullName>
            </value>
            <value>
                <fullName>WEDONTSELL</fullName>
            </value>
            <value>
                <fullName>OTHERWHY</fullName>
            </value>
            <value>
                <fullName>SHIPPING</fullName>
            </value>
            <value>
                <fullName>BRANDING</fullName>
            </value>
            <value>
                <fullName>UNIQUE</fullName>
            </value>
            <value>
                <fullName>QUALITY</fullName>
            </value>
            <value>
                <fullName>INVENTORY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>