force-app/main/default/objects/Intel__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chain, Wire, Stringing Material</fullName>
            </value>
            <value>
                <fullName>Components and Findings</fullName>
            </value>
            <value>
                <fullName>Gemstones</fullName>
            </value>
            <value>
                <fullName>Pearls</fullName>
            </value>
            <value>
                <fullName>Precious Metals</fullName>
            </value>
            <value>
                <fullName>Seed and Bugle Beads</fullName>
            </value>
            <value>
                <fullName>Swarovski</fullName>
            </value>
            <value>
                <fullName>Tools, Displays and Organizers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>