force-app/main/default/objects/Intel__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Unique of One of a Kind</fullName>
            </value>
            <value>
                <fullName>Quality or Grade</fullName>
            </value>
            <value>
                <fullName>Out of Stock</fullName>
            </value>
            <value>
                <fullName>Items Not Branded</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Selection or Product Requests</fullName>
                <isActive>false</isActive>
                <label>Selection or Product Requests</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>