force-app/main/default/objects/Intel__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Art Beads</fullName>
            </value>
            <value>
                <fullName>Beadsmith/Helby</fullName>
            </value>
            <value>
                <fullName>Chain Store</fullName>
            </value>
            <value>
                <fullName>Lima Beads</fullName>
            </value>
            <value>
                <fullName>Rio Grande</fullName>
            </value>
            <value>
                <fullName>ShipWreck</fullName>
            </value>
            <value>
                <fullName>Importing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Beadalon/Artistic Wire</fullName>
                <isActive>false</isActive>
                <label>Beadalon/Artistic Wire</label>
            </value>
            <value>
                <fullName>Fusion</fullName>
                <isActive>false</isActive>
                <label>Fusion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>