force-app/main/default/objects/Intel__c/recordTypes/Intel_Competitor.recordType-meta.xml
<RecordType>
    <fullName>Intel_Competitor</fullName>
    <active>false</active>
    <label>Intel Competitor</label>
</RecordType>