force-app/main/default/objects/Intel__c/recordTypes/Intel_Product.recordType-meta.xml
<RecordType>
    <fullName>Intel_Product</fullName>
    <active>false</active>
    <label>Intel Product</label>
</RecordType>