force-app/main/default/objects/Intel__c/recordTypes/Intel_Reason.recordType-meta.xml
<RecordType>
    <fullName>Intel_Reason</fullName>
    <active>false</active>
    <label>Intel Reason</label>
</RecordType>