force-app/main/default/objects/Intel__c/validationRules/Notes_if_other_in_reason_Product_vendor.validationRule-meta.xml
<ValidationRule>
    <fullName>Notes_if_other_in_reason_Product_vendor</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL( Product__c , &apos;Other&apos;) || ISPICKVAL( Reason__c , &apos;Other&apos;) || ISPICKVAL( Vendor__c , &apos;Other&apos;)) &amp;&amp;  ISBLANK( Notes__c )</errorConditionFormula>
    <errorMessage>Please mention Other Product/Vendor/Reason</errorMessage>
</ValidationRule>