force-app/main/default/objects/Intel__c/validationRules/Product_Vendor_reason_cant_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Vendor_reason_cant_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Vendor__c , &quot;&quot;) &amp;&amp; ISPICKVAL( Product__c , &quot;&quot;) &amp;&amp; ISPICKVAL( Reason__c , &quot;&quot;)</errorConditionFormula>
    <errorMessage>You must select any one from Vendor/Product/Reason</errorMessage>
</ValidationRule>